@@ -86,6 +86,20 @@ name|TreeMap
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|ArrayUtil
+import|;
+end_import
+
 begin_comment
 comment|/**   * Collection of {@link FieldInfo}s (accessible by number or by name).  *  @lucene.experimental  */
 end_comment
@@ -143,7 +157,16 @@ specifier|final
 name|boolean
 name|hasDocValues
 decl_stmt|;
-DECL|field|byNumber
+comment|// used only by fieldInfo(int)
+DECL|field|byNumberTable
+specifier|private
+specifier|final
+name|FieldInfo
+index|[]
+name|byNumberTable
+decl_stmt|;
+comment|// contiguous
+DECL|field|byNumberMap
 specifier|private
 specifier|final
 name|SortedMap
@@ -152,13 +175,9 @@ name|Integer
 argument_list|,
 name|FieldInfo
 argument_list|>
-name|byNumber
-init|=
-operator|new
-name|TreeMap
-argument_list|<>
-argument_list|()
+name|byNumberMap
 decl_stmt|;
+comment|// sparse
 DECL|field|byName
 specifier|private
 specifier|final
@@ -229,6 +248,19 @@ name|boolean
 name|hasDocValues
 init|=
 literal|false
+decl_stmt|;
+name|TreeMap
+argument_list|<
+name|Integer
+argument_list|,
+name|FieldInfo
+argument_list|>
+name|byNumber
+init|=
+operator|new
+name|TreeMap
+argument_list|<>
+argument_list|()
 decl_stmt|;
 for|for
 control|(
@@ -486,6 +518,110 @@ name|values
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|Integer
+name|max
+init|=
+name|byNumber
+operator|.
+name|isEmpty
+argument_list|()
+condition|?
+literal|null
+else|:
+name|Collections
+operator|.
+name|max
+argument_list|(
+name|byNumber
+operator|.
+name|keySet
+argument_list|()
+argument_list|)
+decl_stmt|;
+comment|// Only usee TreeMap in the very sparse case (< 1/16th of the numbers are used),
+comment|// because TreeMap uses ~ 64 (32 bit JVM) or 120 (64 bit JVM w/o compressed oops)
+comment|// overall bytes per entry, but array uses 4 (32 bit JMV) or 8
+comment|// (64 bit JVM w/o compressed oops):
+if|if
+condition|(
+name|max
+operator|!=
+literal|null
+operator|&&
+name|max
+operator|<
+name|ArrayUtil
+operator|.
+name|MAX_ARRAY_LENGTH
+operator|&&
+name|max
+operator|<
+literal|16L
+operator|*
+name|byNumber
+operator|.
+name|size
+argument_list|()
+condition|)
+block|{
+name|byNumberMap
+operator|=
+literal|null
+expr_stmt|;
+name|byNumberTable
+operator|=
+operator|new
+name|FieldInfo
+index|[
+name|max
+operator|+
+literal|1
+index|]
+expr_stmt|;
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|Integer
+argument_list|,
+name|FieldInfo
+argument_list|>
+name|entry
+range|:
+name|byNumber
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
+name|byNumberTable
+index|[
+name|entry
+operator|.
+name|getKey
+argument_list|()
+index|]
+operator|=
+name|entry
+operator|.
+name|getValue
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+name|byNumberMap
+operator|=
+name|byNumber
+expr_stmt|;
+name|byNumberTable
+operator|=
+literal|null
+expr_stmt|;
+block|}
 block|}
 comment|/** Returns true if any fields have freqs */
 DECL|method|hasFreq
@@ -571,19 +707,8 @@ name|int
 name|size
 parameter_list|()
 block|{
-assert|assert
-name|byNumber
-operator|.
-name|size
-argument_list|()
-operator|==
-name|byName
-operator|.
-name|size
-argument_list|()
-assert|;
 return|return
-name|byNumber
+name|byName
 operator|.
 name|size
 argument_list|()
@@ -655,14 +780,44 @@ name|fieldNumber
 argument_list|)
 throw|;
 block|}
+if|if
+condition|(
+name|byNumberTable
+operator|!=
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|fieldNumber
+operator|>=
+name|byNumberTable
+operator|.
+name|length
+condition|)
+block|{
 return|return
-name|byNumber
+literal|null
+return|;
+block|}
+return|return
+name|byNumberTable
+index|[
+name|fieldNumber
+index|]
+return|;
+block|}
+else|else
+block|{
+return|return
+name|byNumberMap
 operator|.
 name|get
 argument_list|(
 name|fieldNumber
 argument_list|)
 return|;
+block|}
 block|}
 DECL|class|FieldNumbers
 specifier|static
